--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.29.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
